# discord-hikari-youtubedl-poc

./: .env.example  Procfile  pyproject.toml  requirements.txt
hikari_ytdl/: main.py
