[tool.poetry]
name = "hikari_ytdl"
version = "0.1.0"
description = ""
authors = ["AnggaraNothing <example@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
hikari = "^2.0.0-alpha.108"
python-dotenv = "^0.20.0"
songbird-py = "^0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
